--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2"
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.17.2",
+    "xlsx": "^0.18.5"
   }
 }
